--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,18 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-devtools:2.6.3'
+
     implementation 'mysql:mysql-connector-java'
+
+    implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.3'
+
+    //thymeleaf
+    implementation'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
